# kininaru_clip

./: docker-compose.dev.yaml  docker-compose.dev.yml  go.mod
.github/: labeler.yml
.github/workflow/: lgtm.yaml
.github/workflows/: labeler.yaml  lgtm.yaml  vercel-deploy.yaml
ai_engine/: .gitignore  Dockerfile  main.py  pyproject.toml
ai_engine/api/: deps.py
ai_engine/domain/model/: recommend.py
ai_engine/domain/repository/: google_map.py  llm.py
ai_engine/infrastructure/googlemap/: google_map.py
ai_engine/ml/llm/: openai.py  schema.py
ai_engine/services/: summary.py
ai_engine/src/llm/: llm.py  openai.py
ai_engine/src/maps/: places.py
ai_engine/src/schema/: map.py  recommend.py  summary.py
ai_engine/src/services/: recommend.py  summary.py
ai_engine/src/utils/: display.py  log.py  ranking.py
ai_engine/usecase/: recommend.py  summary.py
backend/: Dockerfile  go.mod  go.sum
backend/app/handler/: event.go  handler.go  idea.go  user.go
backend/app/usecase/: event.go  idea.go  user.go
backend/cmd/: main.go
backend/cmd/server/: server.go
backend/domain/model/: event.go  idea.go  recommend.go  user.go
backend/domain/repository/: event.go  idea.go  user.go
backend/infrastructure/: database.go
backend/infrastructure/datastore/: datastore.go
backend/pkg/uid/: uid.go
docs/: api-document.yaml
frontend/: .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
mysql/mysql_init/: init.sql  insert.sql
postgres/config/: servers.json
postgres/postgres_init/: 01_init.sql
(+36 files in other folders)
